Revision history for CSS-Parse-Packed

0.02   Thu Jun 19 2007

	* Ignoring @ rule in the CSS string.

0.01   Thu May 31 2007

	* Initial release.